// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderCardSVG > renders asynced24's card unchanged 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="358" height="498" viewBox="0 0 358 498" fill="none">
  <defs>
    <style>
    @keyframes gw-sweep { 0% { transform: translateX(-160px) } 55%, 100% { transform: translateX(560px) } }
    @keyframes gw-twinkle { 0%, 100% { opacity: 0.15 } 50% { opacity: 0.95 } }
    @keyframes gw-pulse { 0%, 100% { stroke-opacity: 0.2 } 50% { stroke-opacity: 0.65 } }
    .gw-sweep { animation: gw-sweep 5.5s ease-in-out infinite; }
    .gw-twinkle { animation: gw-twinkle 2.4s ease-in-out infinite; }
    .gw-pulse { animation: gw-pulse 3s ease-in-out infinite; }
    @media (prefers-reduced-motion: reduce) { .gw-sweep, .gw-twinkle, .gw-pulse { animation: none; } }
  </style>
    <linearGradient id="gw-sweepGrad" x1="0" y1="0" x2="1" y2="0">
      <stop offset="0" stop-color="#FFFFFF" stop-opacity="0"/>
      <stop offset="0.45" stop-color="#FFFFFF" stop-opacity="0.32"/>
      <stop offset="0.6" stop-color="#56D6FF" stop-opacity="0.22"/>
      <stop offset="1" stop-color="#FFFFFF" stop-opacity="0"/>
    </linearGradient>
    <linearGradient id="gw-holo" gradientUnits="userSpaceOnUse" x1="0" y1="0" x2="358" y2="498">
      <stop offset="0" stop-color="#6E4F0E"/>
      <stop offset="0.38" stop-color="#C9971C"/>
      <stop offset="0.48" stop-color="#FFF4C2"/>
      <stop offset="0.58" stop-color="#C9971C"/>
      <stop offset="1" stop-color="#6E4F0E"/>
      <!-- The bright band travels around the frame: a glint, not a colour cycle. -->
      <animateTransform attributeName="gradientTransform" type="rotate" from="0 179 249" to="360 179 249" dur="6s" repeatCount="indefinite"/>
    </linearGradient>
    <linearGradient id="gw-theme" x1="0" y1="0" x2="1" y2="1">
      <stop offset="0" stop-color="#3178C6"/>
      <stop offset="1" stop-color="#58A6FF"/>
    </linearGradient>
    <linearGradient id="gw-scrim" x1="0" y1="0" x2="0" y2="1">
      <stop offset="0" stop-color="#05080F" stop-opacity="0"/>
      <stop offset="0.55" stop-color="#05080F" stop-opacity="0.35"/>
      <stop offset="1" stop-color="#05080F" stop-opacity="0.85"/>
    </linearGradient>
    <linearGradient id="gw-foil" x1="0" y1="0" x2="1" y2="0.7">
      <stop offset="0" stop-color="#FFFFFF" stop-opacity="0.090"/>
      <stop offset="0.28" stop-color="#56D6FF" stop-opacity="0.100"/>
      <stop offset="0.5" stop-color="#FFFFFF" stop-opacity="0"/>
      <stop offset="0.72" stop-color="#FF9FF0" stop-opacity="0.080"/>
      <stop offset="1" stop-color="#FFFFFF" stop-opacity="0.060"/>
    </linearGradient>
    <filter id="gw-frost" x="-5%" y="-5%" width="110%" height="110%"><feGaussianBlur stdDeviation="7"/></filter>
    <filter id="gw-glow" x="-5%" y="-80%" width="110%" height="260%">
      <feGaussianBlur in="SourceAlpha" stdDeviation="2.5" result="b"/>
      <feFlood flood-color="#56D6FF" flood-opacity="0.95"/>
      <feComposite in2="b" operator="in" result="g"/>
      <feMerge><feMergeNode in="g"/><feMergeNode in="SourceGraphic"/></feMerge>
    </filter>
    <filter id="gw-sparkle" x="-100%" y="-100%" width="300%" height="300%">
      <feGaussianBlur in="SourceAlpha" stdDeviation="3" result="b"/>
      <feFlood flood-color="#56D6FF" flood-opacity="0.9"/>
      <feComposite in2="b" operator="in" result="g"/>
      <feMerge><feMergeNode in="g"/><feMergeNode in="SourceGraphic"/></feMerge>
    </filter>
    <filter id="gw-shadow" x="-20%" y="-20%" width="140%" height="160%">
      <feDropShadow dx="0" dy="1" stdDeviation="1.5" flood-color="#000000" flood-opacity="0.7"/>
    </filter>
    <filter id="gw-lift" x="-30%" y="-30%" width="160%" height="160%">
      <feDropShadow dx="0" dy="4" stdDeviation="6" flood-color="#000000" flood-opacity="0.55"/>
    </filter>
    <clipPath id="gw-card"><rect width="358" height="498" rx="20"/></clipPath>
    <clipPath id="gw-avatar"><circle cx="179" cy="132" r="40"/></clipPath>
    <clipPath id="gw-p0"><rect x="12" y="296" width="334" height="64" rx="10"/></clipPath><clipPath id="gw-p1"><rect x="12" y="366" width="334" height="80" rx="10"/></clipPath><clipPath id="gw-p2"><rect x="12" y="452" width="334" height="30" rx="7"/></clipPath>
  </defs>

  <g clip-path="url(#gw-card)">
  <rect width="358" height="498" fill="#070914"/>
  <rect id="gw-art" width="358" height="498" fill="url(#gw-theme)"/>
  <rect y="255" width="358" height="243" fill="url(#gw-scrim)"/>
  <rect width="358" height="498" fill="url(#gw-foil)" style="mix-blend-mode:overlay"/>
  <g transform="skewX(-18)" style="mix-blend-mode:screen"><rect class="gw-sweep" x="-40" y="-20" width="90" height="538" fill="url(#gw-sweepGrad)"/></g>
  <path d="M48,91 Q49.1,94.9 53,96 Q49.1,97.1 48,101 Q46.9,97.1 43,96 Q46.9,94.9 48,91Z" fill="#FFFFFF" opacity="0.58" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:0.00s"/><path d="M300,72.5 Q301.65,78.35 307.5,80 Q301.65,81.65 300,87.5 Q298.35,81.65 292.5,80 Q298.35,78.35 300,72.5Z" fill="#FFFFFF" opacity="0.58" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:0.37s"/><path d="M232,186 Q234.2,193.8 242,196 Q234.2,198.2 232,206 Q229.8,198.2 222,196 Q229.8,193.8 232,186Z" fill="#FFFFFF" opacity="0.58" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:0.74s"/>

  <!-- 52-week contribution horizon -->
  <polyline class="gw-pulse" points="8.0,277.0 14.6,277.0 21.2,273.3 27.7,271.8 34.3,277.0 40.9,277.0 47.5,277.0 54.0,277.0 60.6,277.0 67.2,277.0 73.8,277.0 80.3,277.0 86.9,277.0 93.5,277.0 100.1,266.2 106.7,277.0 113.2,272.5 119.8,277.0 126.4,266.5 133.0,262.9 139.5,263.6 146.1,262.4 152.7,277.0 159.3,270.1 165.8,273.3 172.4,277.0 179.0,273.3 185.6,277.0 192.2,277.0 198.7,277.0 205.3,277.0 211.9,277.0 218.5,270.1 225.0,271.1 231.6,257.5 238.2,247.9 244.8,260.8 251.3,261.0 257.9,267.9 264.5,268.3 271.1,267.2 277.7,277.0 284.2,267.5 290.8,271.1 297.4,265.3 304.0,260.8 310.5,254.3 317.1,261.9 323.7,255.4 330.3,257.2 336.8,251.4 343.4,246.1 350.0,243.0" stroke="#56D6FF" stroke-width="4.5" stroke-opacity="0.35" stroke-linejoin="round" stroke-linecap="round"/>
  <polyline points="8.0,277.0 14.6,277.0 21.2,273.3 27.7,271.8 34.3,277.0 40.9,277.0 47.5,277.0 54.0,277.0 60.6,277.0 67.2,277.0 73.8,277.0 80.3,277.0 86.9,277.0 93.5,277.0 100.1,266.2 106.7,277.0 113.2,272.5 119.8,277.0 126.4,266.5 133.0,262.9 139.5,263.6 146.1,262.4 152.7,277.0 159.3,270.1 165.8,273.3 172.4,277.0 179.0,273.3 185.6,277.0 192.2,277.0 198.7,277.0 205.3,277.0 211.9,277.0 218.5,270.1 225.0,271.1 231.6,257.5 238.2,247.9 244.8,260.8 251.3,261.0 257.9,267.9 264.5,268.3 271.1,267.2 277.7,277.0 284.2,267.5 290.8,271.1 297.4,265.3 304.0,260.8 310.5,254.3 317.1,261.9 323.7,255.4 330.3,257.2 336.8,251.4 343.4,246.1 350.0,243.0" stroke="#EAFBFF" stroke-opacity="0.95" stroke-width="1.6" stroke-linejoin="round" stroke-linecap="round" filter="url(#gw-glow)"/>

  <!-- Avatar: large circle over the art -->
  <circle cx="179" cy="132" r="43" fill="rgba(10,15,29,0.55)" filter="url(#gw-lift)"/>
  <circle cx="179" cy="132" r="40" fill="#3178C6"/><text x="179" y="143" text-anchor="middle" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="30" fill="#FFFFFF">A</text>
  <circle cx="179" cy="132" r="41.2" stroke="#56D6FF" stroke-opacity="0.85" stroke-width="2.4"/>

  <!-- Header -->
  <rect x="10" y="10" width="338" height="48" rx="11.5" fill="rgba(10,15,29,0.92)" stroke="rgba(255,255,255,0.15)"/>
  <rect x="20" y="19" width="58" height="30" rx="15" fill="#E8EEF6"/>
  <text x="49" y="37.5" text-anchor="middle" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="9.5" letter-spacing="0.5" fill="#0A0F1D">STAGE 1</text>
  <text x="179" y="39.5" text-anchor="middle" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="15.5" fill="#FFFFFF">asynced24</text>
  <text x="340" y="43" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="24" fill="#FFFFFF">190</text>
  <text x="286.5" y="43" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="8" fill="#9FB3CC">HP</text>

  <!-- Frosted panels -->
  <g clip-path="url(#gw-p0)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="296" width="334" height="64" rx="10" fill="rgba(11,18,32,0.55)" stroke="rgba(255,255,255,0.14)"/>
  <line x1="22" y1="296.5" x2="336" y2="296.5" stroke="rgba(255,255,255,0.18)"/>
  <g clip-path="url(#gw-p1)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="366" width="334" height="80" rx="10" fill="rgba(11,18,32,0.55)" stroke="rgba(255,255,255,0.14)"/>
  <line x1="22" y1="366.5" x2="336" y2="366.5" stroke="rgba(255,255,255,0.18)"/>
  <g clip-path="url(#gw-p2)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="452" width="334" height="30" rx="7" fill="rgba(10,15,29,0.70)" stroke="rgba(255,255,255,0.14)"/>
  <line x1="19" y1="452.5" x2="339" y2="452.5" stroke="rgba(255,255,255,0.18)"/>

  <!-- Ability -->
  <text x="24" y="313" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" letter-spacing="2" fill="#56D6FF">ABILITY</text>
  <text x="84" y="314" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="14.5" fill="#FFFFFF">Polyglot</text>
  <text x="24" y="332" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="9.5" font-style="italic" fill="#D5DEEC">Writes 5 languages - attacks deal 10 extra damage</text>
  <text x="24" y="347" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8.5" letter-spacing="0.5" fill="#8CA0BC">1,152 contribs · 31/53 wks active</text>

  <!-- Attacks -->
  <circle cx="29.5" cy="379.5" r="5.5" fill="#56D6FF" stroke="rgba(255,255,255,0.35)"/><circle cx="43.5" cy="379.5" r="5.5" fill="#56D6FF" stroke="rgba(255,255,255,0.35)"/>
  <text x="58" y="384" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="12.5" fill="#FFFFFF">Type Strike</text>
  <text x="58" y="397" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" fill="#93A5C0">1,152 contributions in the last year</text>
  <text x="334" y="393" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="21" fill="#FFFFFF" filter="url(#gw-shadow)">110</text>
  <rect x="24" y="406" width="310" height="1" fill="rgba(255,255,255,0.09)"/>
  <circle cx="29.5" cy="417.5" r="5.5" fill="#56D6FF" stroke="rgba(255,255,255,0.35)"/><circle cx="43.5" cy="417.5" r="5.5" fill="#56D6FF" stroke="rgba(255,255,255,0.35)"/>
  <text x="58" y="422" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="12.5" fill="#FFFFFF">Thunder Compile</text>
  <text x="58" y="435" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" fill="#93A5C0">Powered by gitwrapped - ★ 1</text>
  <text x="334" y="431" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="21" fill="#FFFFFF" filter="url(#gw-shadow)">30</text>

  <!-- Weakness / resist / retreat -->
  <text x="67.7" y="471.5" text-anchor="middle" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace"><tspan font-size="7" letter-spacing="1" fill="#7E90AB">WEAKNESS</tspan><tspan font-size="9.5" fill="#9AA7B8" dx="6">●</tspan><tspan font-size="9.5" fill="#C7D2E2" dx="4">×2</tspan></text>
  <rect x="123.3" y="459" width="1" height="16" fill="rgba(255,255,255,0.09)"/>
  <text x="179.0" y="471.5" text-anchor="middle" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace"><tspan font-size="7" letter-spacing="1" fill="#7E90AB">RESIST</tspan><tspan font-size="9.5" fill="#9AA7B8" dx="6">●</tspan><tspan font-size="9.5" fill="#C7D2E2" dx="4">-30</tspan></text>
  <rect x="234.7" y="459" width="1" height="16" fill="rgba(255,255,255,0.09)"/>
  <text x="290.3" y="471.5" text-anchor="middle" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace"><tspan font-size="7" letter-spacing="1" fill="#7E90AB">RETREAT</tspan><tspan font-size="9.5" fill="#56D6FF" dx="6" letter-spacing="1">●●●</tspan></text>

  <!-- Footer -->
  <text x="18" y="492" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" fill="#A9B8CE" filter="url(#gw-shadow)">gitwrapped · The Steps · 1 of 1</text>
  <text x="340" y="492" text-anchor="end" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" letter-spacing="1" fill="#F5C518" filter="url(#gw-shadow)">◆ ONE OF ONE</text>
  </g>

  <!-- Rarity frame -->
  <rect x="1.75" y="1.75" width="354.5" height="494.5" rx="18.25" stroke="url(#gw-holo)" stroke-opacity="0.9" stroke-width="3.5"/>
</svg>"
`;

exports[`renderCardSVG > renders gaearon's card unchanged 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="358" height="498" viewBox="0 0 358 498" fill="none">
  <defs>
    <style>
    @keyframes gw-sweep { 0% { transform: translateX(-160px) } 55%, 100% { transform: translateX(560px) } }
    @keyframes gw-twinkle { 0%, 100% { opacity: 0.15 } 50% { opacity: 0.95 } }
    @keyframes gw-pulse { 0%, 100% { stroke-opacity: 0.2 } 50% { stroke-opacity: 0.65 } }
    .gw-sweep { animation: gw-sweep 5.5s ease-in-out infinite; }
    .gw-twinkle { animation: gw-twinkle 2.4s ease-in-out infinite; }
    .gw-pulse { animation: gw-pulse 3s ease-in-out infinite; }
    @media (prefers-reduced-motion: reduce) { .gw-sweep, .gw-twinkle, .gw-pulse { animation: none; } }
  </style>
    <linearGradient id="gw-sweepGrad" x1="0" y1="0" x2="1" y2="0">
      <stop offset="0" stop-color="#FFFFFF" stop-opacity="0"/>
      <stop offset="0.45" stop-color="#FFFFFF" stop-opacity="0.32"/>
      <stop offset="0.6" stop-color="#B78CFF" stop-opacity="0.22"/>
      <stop offset="1" stop-color="#FFFFFF" stop-opacity="0"/>
    </linearGradient>
    
    <linearGradient id="gw-theme" x1="0" y1="0" x2="1" y2="1">
      <stop offset="0" stop-color="#6B7280"/>
      <stop offset="1" stop-color="#9CA3AF"/>
    </linearGradient>
    <linearGradient id="gw-scrim" x1="0" y1="0" x2="0" y2="1">
      <stop offset="0" stop-color="#05080F" stop-opacity="0"/>
      <stop offset="0.55" stop-color="#05080F" stop-opacity="0.35"/>
      <stop offset="1" stop-color="#05080F" stop-opacity="0.85"/>
    </linearGradient>
    <linearGradient id="gw-foil" x1="0" y1="0" x2="1" y2="0.7">
      <stop offset="0" stop-color="#FFFFFF" stop-opacity="0.234"/>
      <stop offset="0.28" stop-color="#B78CFF" stop-opacity="0.260"/>
      <stop offset="0.5" stop-color="#FFFFFF" stop-opacity="0"/>
      <stop offset="0.72" stop-color="#FF9FF0" stop-opacity="0.208"/>
      <stop offset="1" stop-color="#FFFFFF" stop-opacity="0.156"/>
    </linearGradient>
    <filter id="gw-frost" x="-5%" y="-5%" width="110%" height="110%"><feGaussianBlur stdDeviation="7"/></filter>
    <filter id="gw-glow" x="-5%" y="-80%" width="110%" height="260%">
      <feGaussianBlur in="SourceAlpha" stdDeviation="2.5" result="b"/>
      <feFlood flood-color="#B78CFF" flood-opacity="0.95"/>
      <feComposite in2="b" operator="in" result="g"/>
      <feMerge><feMergeNode in="g"/><feMergeNode in="SourceGraphic"/></feMerge>
    </filter>
    <filter id="gw-sparkle" x="-100%" y="-100%" width="300%" height="300%">
      <feGaussianBlur in="SourceAlpha" stdDeviation="3" result="b"/>
      <feFlood flood-color="#B78CFF" flood-opacity="0.9"/>
      <feComposite in2="b" operator="in" result="g"/>
      <feMerge><feMergeNode in="g"/><feMergeNode in="SourceGraphic"/></feMerge>
    </filter>
    <filter id="gw-shadow" x="-20%" y="-20%" width="140%" height="160%">
      <feDropShadow dx="0" dy="1" stdDeviation="1.5" flood-color="#000000" flood-opacity="0.7"/>
    </filter>
    <filter id="gw-lift" x="-30%" y="-30%" width="160%" height="160%">
      <feDropShadow dx="0" dy="4" stdDeviation="6" flood-color="#000000" flood-opacity="0.55"/>
    </filter>
    <clipPath id="gw-card"><rect width="358" height="498" rx="20"/></clipPath>
    <clipPath id="gw-avatar"><circle cx="179" cy="132" r="40"/></clipPath>
    <clipPath id="gw-p0"><rect x="12" y="296" width="334" height="64" rx="10"/></clipPath><clipPath id="gw-p1"><rect x="12" y="366" width="334" height="80" rx="10"/></clipPath><clipPath id="gw-p2"><rect x="12" y="452" width="334" height="30" rx="7"/></clipPath>
  </defs>

  <g clip-path="url(#gw-card)">
  <rect width="358" height="498" fill="#070914"/>
  <rect id="gw-art" width="358" height="498" fill="url(#gw-theme)"/>
  <rect y="255" width="358" height="243" fill="url(#gw-scrim)"/>
  <rect width="358" height="498" fill="url(#gw-foil)" style="mix-blend-mode:overlay"/>
  <g transform="skewX(-18)" style="mix-blend-mode:screen"><rect class="gw-sweep" x="-40" y="-20" width="90" height="538" fill="url(#gw-sweepGrad)"/></g>
  <path d="M48,91 Q49.1,94.9 53,96 Q49.1,97.1 48,101 Q46.9,97.1 43,96 Q46.9,94.9 48,91Z" fill="#FFFFFF" opacity="0.63" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:0.00s"/><path d="M300,72.5 Q301.65,78.35 307.5,80 Q301.65,81.65 300,87.5 Q298.35,81.65 292.5,80 Q298.35,78.35 300,72.5Z" fill="#FFFFFF" opacity="0.63" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:0.37s"/><path d="M232,186 Q234.2,193.8 242,196 Q234.2,198.2 232,206 Q229.8,198.2 222,196 Q229.8,193.8 232,186Z" fill="#FFFFFF" opacity="0.63" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:0.74s"/><path d="M90,205 Q91.1,208.9 95,210 Q91.1,211.1 90,215 Q88.9,211.1 85,210 Q88.9,208.9 90,205Z" fill="#FFFFFF" opacity="0.63" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:1.11s"/><path d="M320,182.5 Q321.65,188.35 327.5,190 Q321.65,191.65 320,197.5 Q318.35,191.65 312.5,190 Q318.35,188.35 320,182.5Z" fill="#FFFFFF" opacity="0.63" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:1.48s"/><path d="M250,110 Q252.2,117.8 260,120 Q252.2,122.2 250,130 Q247.8,122.2 240,120 Q247.8,117.8 250,110Z" fill="#FFFFFF" opacity="0.63" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:1.85s"/><path d="M140,65 Q141.1,68.9 145,70 Q141.1,71.1 140,75 Q138.9,71.1 135,70 Q138.9,68.9 140,65Z" fill="#FFFFFF" opacity="0.63" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:2.22s"/><path d="M270,232.5 Q271.65,238.35 277.5,240 Q271.65,241.65 270,247.5 Q268.35,241.65 262.5,240 Q268.35,238.35 270,232.5Z" fill="#FFFFFF" opacity="0.63" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:2.59s"/>

  <!-- 52-week contribution horizon -->
  <polyline class="gw-pulse" points="8.0,265.5 14.6,246.5 21.2,255.8 27.7,277.0 34.3,269.8 40.9,277.0 47.5,263.2 54.0,273.2 60.6,277.0 67.2,277.0 73.8,267.6 80.3,269.3 86.9,258.0 93.5,266.1 100.1,277.0 106.7,271.6 113.2,257.2 119.8,258.8 126.4,262.9 133.0,270.9 139.5,270.9 146.1,268.9 152.7,270.4 159.3,273.2 165.8,258.8 172.4,277.0 179.0,272.3 185.6,277.0 192.2,277.0 198.7,272.3 205.3,277.0 211.9,277.0 218.5,277.0 225.0,277.0 231.6,277.0 238.2,277.0 244.8,277.0 251.3,277.0 257.9,268.0 264.5,268.4 271.1,262.9 277.7,262.1 284.2,259.8 290.8,257.8 297.4,260.9 304.0,264.0 310.5,270.9 317.1,243.0 323.7,252.6 330.3,259.2 336.8,277.0 343.4,268.0 350.0,277.0" stroke="#B78CFF" stroke-width="4.5" stroke-opacity="0.35" stroke-linejoin="round" stroke-linecap="round"/>
  <polyline points="8.0,265.5 14.6,246.5 21.2,255.8 27.7,277.0 34.3,269.8 40.9,277.0 47.5,263.2 54.0,273.2 60.6,277.0 67.2,277.0 73.8,267.6 80.3,269.3 86.9,258.0 93.5,266.1 100.1,277.0 106.7,271.6 113.2,257.2 119.8,258.8 126.4,262.9 133.0,270.9 139.5,270.9 146.1,268.9 152.7,270.4 159.3,273.2 165.8,258.8 172.4,277.0 179.0,272.3 185.6,277.0 192.2,277.0 198.7,272.3 205.3,277.0 211.9,277.0 218.5,277.0 225.0,277.0 231.6,277.0 238.2,277.0 244.8,277.0 251.3,277.0 257.9,268.0 264.5,268.4 271.1,262.9 277.7,262.1 284.2,259.8 290.8,257.8 297.4,260.9 304.0,264.0 310.5,270.9 317.1,243.0 323.7,252.6 330.3,259.2 336.8,277.0 343.4,268.0 350.0,277.0" stroke="#EAFBFF" stroke-opacity="0.95" stroke-width="1.6" stroke-linejoin="round" stroke-linecap="round" filter="url(#gw-glow)"/>

  <!-- Avatar: large circle over the art -->
  <circle cx="179" cy="132" r="43" fill="rgba(10,15,29,0.55)" filter="url(#gw-lift)"/>
  <circle cx="179" cy="132" r="40" fill="#6B7280"/><text x="179" y="143" text-anchor="middle" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="30" fill="#FFFFFF">G</text>
  <circle cx="179" cy="132" r="41.2" stroke="#B78CFF" stroke-opacity="0.85" stroke-width="2.4"/>

  <!-- Header -->
  <rect x="10" y="10" width="338" height="48" rx="11.5" fill="rgba(10,15,29,0.92)" stroke="rgba(255,255,255,0.15)"/>
  <rect x="20" y="19" width="58" height="30" rx="15" fill="#F5C518"/>
  <text x="49" y="37.5" text-anchor="middle" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="9.5" letter-spacing="0.5" fill="#0A0F1D">STAGE 2</text>
  <text x="179" y="39.5" text-anchor="middle" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="15.5" fill="#FFFFFF">gaearon</text>
  <text x="340" y="43" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="24" fill="#FFFFFF">270</text>
  <text x="286.5" y="43" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="8" fill="#9FB3CC">HP</text>

  <!-- Frosted panels -->
  <g clip-path="url(#gw-p0)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="296" width="334" height="64" rx="10" fill="rgba(11,18,32,0.55)" stroke="rgba(255,255,255,0.14)"/>
  <line x1="22" y1="296.5" x2="336" y2="296.5" stroke="rgba(255,255,255,0.18)"/>
  <g clip-path="url(#gw-p1)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="366" width="334" height="80" rx="10" fill="rgba(11,18,32,0.55)" stroke="rgba(255,255,255,0.14)"/>
  <line x1="22" y1="366.5" x2="336" y2="366.5" stroke="rgba(255,255,255,0.18)"/>
  <g clip-path="url(#gw-p2)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="452" width="334" height="30" rx="7" fill="rgba(10,15,29,0.70)" stroke="rgba(255,255,255,0.14)"/>
  <line x1="19" y1="452.5" x2="339" y2="452.5" stroke="rgba(255,255,255,0.18)"/>

  <!-- Ability -->
  <text x="24" y="313" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" letter-spacing="2" fill="#B78CFF">ABILITY</text>
  <text x="84" y="314" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="14.5" fill="#FFFFFF">Star Collector</text>
  <text x="24" y="332" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="9.5" font-style="italic" fill="#D5DEEC">46k stars across own repos - immune to weakness</text>
  <text x="24" y="347" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8.5" letter-spacing="0.5" fill="#8CA0BC">1,055 contribs · 35/53 wks active</text>

  <!-- Attacks -->
  <circle cx="29.5" cy="379.5" r="5.5" fill="#B78CFF" stroke="rgba(255,255,255,0.35)"/><circle cx="43.5" cy="379.5" r="5.5" fill="#B78CFF" stroke="rgba(255,255,255,0.35)"/>
  <text x="58" y="384" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="12.5" fill="#FFFFFF">Code Strike</text>
  <text x="58" y="397" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" fill="#93A5C0">1,055 contributions in the last year</text>
  <text x="334" y="393" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="21" fill="#FFFFFF" filter="url(#gw-shadow)">110</text>
  <rect x="24" y="406" width="310" height="1" fill="rgba(255,255,255,0.09)"/>
  <circle cx="29.5" cy="417.5" r="5.5" fill="#B78CFF" stroke="rgba(255,255,255,0.35)"/><circle cx="43.5" cy="417.5" r="5.5" fill="#B78CFF" stroke="rgba(255,255,255,0.35)"/><circle cx="57.5" cy="417.5" r="5.5" fill="#B78CFF" stroke="rgba(255,255,255,0.35)"/>
  <text x="72" y="422" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="12.5" fill="#FFFFFF">Stack Overflow</text>
  <text x="72" y="435" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" fill="#93A5C0">Powered by react-hot-loader - ★ 12k</text>
  <text x="334" y="431" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="21" fill="#FFFFFF" filter="url(#gw-shadow)">190</text>

  <!-- Weakness / resist / retreat -->
  <text x="67.7" y="471.5" text-anchor="middle" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace"><tspan font-size="7" letter-spacing="1" fill="#7E90AB">WEAKNESS</tspan><tspan font-size="9.5" fill="#9AA7B8" dx="6">●</tspan><tspan font-size="9.5" fill="#C7D2E2" dx="4">×2</tspan></text>
  <rect x="123.3" y="459" width="1" height="16" fill="rgba(255,255,255,0.09)"/>
  <text x="179.0" y="471.5" text-anchor="middle" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace"><tspan font-size="7" letter-spacing="1" fill="#7E90AB">RESIST</tspan><tspan font-size="9.5" fill="#9AA7B8" dx="6">●</tspan><tspan font-size="9.5" fill="#C7D2E2" dx="4">-30</tspan></text>
  <rect x="234.7" y="459" width="1" height="16" fill="rgba(255,255,255,0.09)"/>
  <text x="290.3" y="471.5" text-anchor="middle" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace"><tspan font-size="7" letter-spacing="1" fill="#7E90AB">RETREAT</tspan><tspan font-size="9.5" fill="#B78CFF" dx="6" letter-spacing="1">●●</tspan></text>

  <!-- Footer -->
  <text x="18" y="492" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" fill="#A9B8CE" filter="url(#gw-shadow)">gitwrapped · Axiom Owl · Rune Vigil</text>
  <text x="340" y="492" text-anchor="end" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" letter-spacing="1" fill="#B78CFF" filter="url(#gw-shadow)">◆ LEGENDARY</text>
  </g>

  <!-- Rarity frame -->
  <rect x="1.5" y="1.5" width="355" height="495" rx="18.5" stroke="#F5C518" stroke-opacity="0.9" stroke-width="3"/>
</svg>"
`;

exports[`renderCardSVG > renders shrikanthv15's card unchanged 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="358" height="498" viewBox="0 0 358 498" fill="none">
  <defs>
    <style>
    @keyframes gw-sweep { 0% { transform: translateX(-160px) } 55%, 100% { transform: translateX(560px) } }
    @keyframes gw-twinkle { 0%, 100% { opacity: 0.15 } 50% { opacity: 0.95 } }
    @keyframes gw-pulse { 0%, 100% { stroke-opacity: 0.2 } 50% { stroke-opacity: 0.65 } }
    .gw-sweep { animation: gw-sweep 5.5s ease-in-out infinite; }
    .gw-twinkle { animation: gw-twinkle 2.4s ease-in-out infinite; }
    .gw-pulse { animation: gw-pulse 3s ease-in-out infinite; }
    @media (prefers-reduced-motion: reduce) { .gw-sweep, .gw-twinkle, .gw-pulse { animation: none; } }
  </style>
    <linearGradient id="gw-sweepGrad" x1="0" y1="0" x2="1" y2="0">
      <stop offset="0" stop-color="#FFFFFF" stop-opacity="0"/>
      <stop offset="0.45" stop-color="#FFFFFF" stop-opacity="0.32"/>
      <stop offset="0.6" stop-color="#4FE3A8" stop-opacity="0.22"/>
      <stop offset="1" stop-color="#FFFFFF" stop-opacity="0"/>
    </linearGradient>
    <linearGradient id="gw-holo" gradientUnits="userSpaceOnUse" x1="0" y1="0" x2="358" y2="498">
      <stop offset="0" stop-color="#6E4F0E"/>
      <stop offset="0.38" stop-color="#C9971C"/>
      <stop offset="0.48" stop-color="#FFF4C2"/>
      <stop offset="0.58" stop-color="#C9971C"/>
      <stop offset="1" stop-color="#6E4F0E"/>
      <!-- The bright band travels around the frame: a glint, not a colour cycle. -->
      <animateTransform attributeName="gradientTransform" type="rotate" from="0 179 249" to="360 179 249" dur="6s" repeatCount="indefinite"/>
    </linearGradient>
    <linearGradient id="gw-theme" x1="0" y1="0" x2="1" y2="1">
      <stop offset="0" stop-color="#E25822"/>
      <stop offset="1" stop-color="#FF6B35"/>
    </linearGradient>
    <linearGradient id="gw-scrim" x1="0" y1="0" x2="0" y2="1">
      <stop offset="0" stop-color="#05080F" stop-opacity="0"/>
      <stop offset="0.55" stop-color="#05080F" stop-opacity="0.35"/>
      <stop offset="1" stop-color="#05080F" stop-opacity="0.85"/>
    </linearGradient>
    <linearGradient id="gw-foil" x1="0" y1="0" x2="1" y2="0.7">
      <stop offset="0" stop-color="#FFFFFF" stop-opacity="0.153"/>
      <stop offset="0.28" stop-color="#4FE3A8" stop-opacity="0.170"/>
      <stop offset="0.5" stop-color="#FFFFFF" stop-opacity="0"/>
      <stop offset="0.72" stop-color="#FF9FF0" stop-opacity="0.136"/>
      <stop offset="1" stop-color="#FFFFFF" stop-opacity="0.102"/>
    </linearGradient>
    <filter id="gw-frost" x="-5%" y="-5%" width="110%" height="110%"><feGaussianBlur stdDeviation="7"/></filter>
    <filter id="gw-glow" x="-5%" y="-80%" width="110%" height="260%">
      <feGaussianBlur in="SourceAlpha" stdDeviation="2.5" result="b"/>
      <feFlood flood-color="#4FE3A8" flood-opacity="0.95"/>
      <feComposite in2="b" operator="in" result="g"/>
      <feMerge><feMergeNode in="g"/><feMergeNode in="SourceGraphic"/></feMerge>
    </filter>
    <filter id="gw-sparkle" x="-100%" y="-100%" width="300%" height="300%">
      <feGaussianBlur in="SourceAlpha" stdDeviation="3" result="b"/>
      <feFlood flood-color="#4FE3A8" flood-opacity="0.9"/>
      <feComposite in2="b" operator="in" result="g"/>
      <feMerge><feMergeNode in="g"/><feMergeNode in="SourceGraphic"/></feMerge>
    </filter>
    <filter id="gw-shadow" x="-20%" y="-20%" width="140%" height="160%">
      <feDropShadow dx="0" dy="1" stdDeviation="1.5" flood-color="#000000" flood-opacity="0.7"/>
    </filter>
    <filter id="gw-lift" x="-30%" y="-30%" width="160%" height="160%">
      <feDropShadow dx="0" dy="4" stdDeviation="6" flood-color="#000000" flood-opacity="0.55"/>
    </filter>
    <clipPath id="gw-card"><rect width="358" height="498" rx="20"/></clipPath>
    <clipPath id="gw-avatar"><circle cx="179" cy="132" r="40"/></clipPath>
    <clipPath id="gw-p0"><rect x="12" y="296" width="334" height="64" rx="10"/></clipPath><clipPath id="gw-p1"><rect x="12" y="366" width="334" height="80" rx="10"/></clipPath><clipPath id="gw-p2"><rect x="12" y="452" width="334" height="30" rx="7"/></clipPath>
  </defs>

  <g clip-path="url(#gw-card)">
  <rect width="358" height="498" fill="#070914"/>
  <rect id="gw-art" width="358" height="498" fill="url(#gw-theme)"/>
  <rect y="255" width="358" height="243" fill="url(#gw-scrim)"/>
  <rect width="358" height="498" fill="url(#gw-foil)" style="mix-blend-mode:overlay"/>
  <g transform="skewX(-18)" style="mix-blend-mode:screen"><rect class="gw-sweep" x="-40" y="-20" width="90" height="538" fill="url(#gw-sweepGrad)"/></g>
  <path d="M48,91 Q49.1,94.9 53,96 Q49.1,97.1 48,101 Q46.9,97.1 43,96 Q46.9,94.9 48,91Z" fill="#FFFFFF" opacity="0.60" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:0.00s"/><path d="M300,72.5 Q301.65,78.35 307.5,80 Q301.65,81.65 300,87.5 Q298.35,81.65 292.5,80 Q298.35,78.35 300,72.5Z" fill="#FFFFFF" opacity="0.60" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:0.37s"/><path d="M232,186 Q234.2,193.8 242,196 Q234.2,198.2 232,206 Q229.8,198.2 222,196 Q229.8,193.8 232,186Z" fill="#FFFFFF" opacity="0.60" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:0.74s"/><path d="M90,205 Q91.1,208.9 95,210 Q91.1,211.1 90,215 Q88.9,211.1 85,210 Q88.9,208.9 90,205Z" fill="#FFFFFF" opacity="0.60" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:1.11s"/><path d="M320,182.5 Q321.65,188.35 327.5,190 Q321.65,191.65 320,197.5 Q318.35,191.65 312.5,190 Q318.35,188.35 320,182.5Z" fill="#FFFFFF" opacity="0.60" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:1.48s"/>

  <!-- 52-week contribution horizon -->
  <polyline class="gw-pulse" points="8.0,277.0 14.6,269.1 21.2,277.0 27.7,277.0 34.3,277.0 40.9,277.0 47.5,277.0 54.0,270.6 60.6,267.9 67.2,277.0 73.8,277.0 80.3,262.6 86.9,277.0 93.5,267.9 100.1,270.6 106.7,265.0 113.2,269.1 119.8,256.7 126.4,254.7 133.0,243.0 139.5,246.2 146.1,254.3 152.7,261.3 159.3,267.9 165.8,266.8 172.4,270.6 179.0,261.9 185.6,258.3 192.2,269.1 198.7,277.0 205.3,261.9 211.9,266.8 218.5,277.0 225.0,269.1 231.6,258.8 238.2,265.9 244.8,277.0 251.3,263.4 257.9,277.0 264.5,277.0 271.1,277.0 277.7,272.5 284.2,277.0 290.8,272.5 297.4,263.4 304.0,277.0 310.5,277.0 317.1,277.0 323.7,277.0 330.3,277.0 336.8,272.5 343.4,277.0 350.0,267.9" stroke="#4FE3A8" stroke-width="4.5" stroke-opacity="0.35" stroke-linejoin="round" stroke-linecap="round"/>
  <polyline points="8.0,277.0 14.6,269.1 21.2,277.0 27.7,277.0 34.3,277.0 40.9,277.0 47.5,277.0 54.0,270.6 60.6,267.9 67.2,277.0 73.8,277.0 80.3,262.6 86.9,277.0 93.5,267.9 100.1,270.6 106.7,265.0 113.2,269.1 119.8,256.7 126.4,254.7 133.0,243.0 139.5,246.2 146.1,254.3 152.7,261.3 159.3,267.9 165.8,266.8 172.4,270.6 179.0,261.9 185.6,258.3 192.2,269.1 198.7,277.0 205.3,261.9 211.9,266.8 218.5,277.0 225.0,269.1 231.6,258.8 238.2,265.9 244.8,277.0 251.3,263.4 257.9,277.0 264.5,277.0 271.1,277.0 277.7,272.5 284.2,277.0 290.8,272.5 297.4,263.4 304.0,277.0 310.5,277.0 317.1,277.0 323.7,277.0 330.3,277.0 336.8,272.5 343.4,277.0 350.0,267.9" stroke="#EAFBFF" stroke-opacity="0.95" stroke-width="1.6" stroke-linejoin="round" stroke-linecap="round" filter="url(#gw-glow)"/>

  <!-- Avatar: large circle over the art -->
  <circle cx="179" cy="132" r="43" fill="rgba(10,15,29,0.55)" filter="url(#gw-lift)"/>
  <circle cx="179" cy="132" r="40" fill="#E25822"/><text x="179" y="143" text-anchor="middle" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="30" fill="#FFFFFF">S</text>
  <circle cx="179" cy="132" r="41.2" stroke="#4FE3A8" stroke-opacity="0.85" stroke-width="2.4"/>

  <!-- Header -->
  <rect x="10" y="10" width="338" height="48" rx="11.5" fill="rgba(10,15,29,0.92)" stroke="rgba(255,255,255,0.15)"/>
  <rect x="20" y="19" width="58" height="30" rx="15" fill="#F5C518"/>
  <text x="49" y="37.5" text-anchor="middle" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="9.5" letter-spacing="0.5" fill="#0A0F1D">STAGE 2</text>
  <text x="179" y="39.5" text-anchor="middle" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="15.5" fill="#FFFFFF">shrikanthv15</text>
  <text x="340" y="43" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="24" fill="#FFFFFF">230</text>
  <text x="286.5" y="43" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="8" fill="#9FB3CC">HP</text>

  <!-- Frosted panels -->
  <g clip-path="url(#gw-p0)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="296" width="334" height="64" rx="10" fill="rgba(11,18,32,0.55)" stroke="rgba(255,255,255,0.14)"/>
  <line x1="22" y1="296.5" x2="336" y2="296.5" stroke="rgba(255,255,255,0.18)"/>
  <g clip-path="url(#gw-p1)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="366" width="334" height="80" rx="10" fill="rgba(11,18,32,0.55)" stroke="rgba(255,255,255,0.14)"/>
  <line x1="22" y1="366.5" x2="336" y2="366.5" stroke="rgba(255,255,255,0.18)"/>
  <g clip-path="url(#gw-p2)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="452" width="334" height="30" rx="7" fill="rgba(10,15,29,0.70)" stroke="rgba(255,255,255,0.14)"/>
  <line x1="19" y1="452.5" x2="339" y2="452.5" stroke="rgba(255,255,255,0.18)"/>

  <!-- Ability -->
  <text x="24" y="313" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" letter-spacing="2" fill="#4FE3A8">ABILITY</text>
  <text x="84" y="314" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="14.5" fill="#FFFFFF">Iron Routine</text>
  <text x="24" y="332" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="9.5" font-style="italic" fill="#D5DEEC">Active 31/53 weeks - immune to status effects</text>
  <text x="24" y="347" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8.5" letter-spacing="0.5" fill="#8CA0BC">326 contribs · 31/53 wks active</text>

  <!-- Attacks -->
  <circle cx="29.5" cy="379.5" r="5.5" fill="#4FE3A8" stroke="rgba(255,255,255,0.35)"/><circle cx="43.5" cy="379.5" r="5.5" fill="#4FE3A8" stroke="rgba(255,255,255,0.35)"/>
  <text x="58" y="384" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="12.5" fill="#FFFFFF">Flame Script</text>
  <text x="58" y="397" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" fill="#93A5C0">326 contributions in the last year</text>
  <text x="334" y="393" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="21" fill="#FFFFFF" filter="url(#gw-shadow)">90</text>
  <rect x="24" y="406" width="310" height="1" fill="rgba(255,255,255,0.09)"/>
  <circle cx="29.5" cy="417.5" r="5.5" fill="#4FE3A8" stroke="rgba(255,255,255,0.35)"/><circle cx="43.5" cy="417.5" r="5.5" fill="#4FE3A8" stroke="rgba(255,255,255,0.35)"/>
  <text x="58" y="422" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="12.5" fill="#FFFFFF">Inferno Deploy</text>
  <text x="58" y="435" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" fill="#93A5C0">Powered by MAD1-Project - ★ 1</text>
  <text x="334" y="431" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="21" fill="#FFFFFF" filter="url(#gw-shadow)">30</text>

  <!-- Weakness / resist / retreat -->
  <text x="67.7" y="471.5" text-anchor="middle" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace"><tspan font-size="7" letter-spacing="1" fill="#7E90AB">WEAKNESS</tspan><tspan font-size="9.5" fill="#9AA7B8" dx="6">●</tspan><tspan font-size="9.5" fill="#C7D2E2" dx="4">×2</tspan></text>
  <rect x="123.3" y="459" width="1" height="16" fill="rgba(255,255,255,0.09)"/>
  <text x="179.0" y="471.5" text-anchor="middle" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace"><tspan font-size="7" letter-spacing="1" fill="#7E90AB">RESIST</tspan><tspan font-size="9.5" fill="#9AA7B8" dx="6">●</tspan><tspan font-size="9.5" fill="#C7D2E2" dx="4">-30</tspan></text>
  <rect x="234.7" y="459" width="1" height="16" fill="rgba(255,255,255,0.09)"/>
  <text x="290.3" y="471.5" text-anchor="middle" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace"><tspan font-size="7" letter-spacing="1" fill="#7E90AB">RETREAT</tspan><tspan font-size="9.5" fill="#4FE3A8" dx="6" letter-spacing="1">●●</tspan></text>

  <!-- Footer -->
  <text x="18" y="492" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" fill="#A9B8CE" filter="url(#gw-shadow)">gitwrapped · Mic And The Owl · 1 of 1</text>
  <text x="340" y="492" text-anchor="end" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" letter-spacing="1" fill="#F5C518" filter="url(#gw-shadow)">◆ ONE OF ONE</text>
  </g>

  <!-- Rarity frame -->
  <rect x="1.75" y="1.75" width="354.5" height="494.5" rx="18.25" stroke="url(#gw-holo)" stroke-opacity="0.9" stroke-width="3.5"/>
</svg>"
`;

exports[`renderCardSVG > renders torvalds's card unchanged 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="358" height="498" viewBox="0 0 358 498" fill="none">
  <defs>
    <style>
    @keyframes gw-sweep { 0% { transform: translateX(-160px) } 55%, 100% { transform: translateX(560px) } }
    @keyframes gw-twinkle { 0%, 100% { opacity: 0.15 } 50% { opacity: 0.95 } }
    @keyframes gw-pulse { 0%, 100% { stroke-opacity: 0.2 } 50% { stroke-opacity: 0.65 } }
    .gw-sweep { animation: gw-sweep 5.5s ease-in-out infinite; }
    .gw-twinkle { animation: gw-twinkle 2.4s ease-in-out infinite; }
    .gw-pulse { animation: gw-pulse 3s ease-in-out infinite; }
    @media (prefers-reduced-motion: reduce) { .gw-sweep, .gw-twinkle, .gw-pulse { animation: none; } }
  </style>
    <linearGradient id="gw-sweepGrad" x1="0" y1="0" x2="1" y2="0">
      <stop offset="0" stop-color="#FFFFFF" stop-opacity="0"/>
      <stop offset="0.45" stop-color="#FFFFFF" stop-opacity="0.32"/>
      <stop offset="0.6" stop-color="#FFB347" stop-opacity="0.22"/>
      <stop offset="1" stop-color="#FFFFFF" stop-opacity="0"/>
    </linearGradient>
    
    <linearGradient id="gw-theme" x1="0" y1="0" x2="1" y2="1">
      <stop offset="0" stop-color="#555555"/>
      <stop offset="1" stop-color="#777777"/>
    </linearGradient>
    <linearGradient id="gw-scrim" x1="0" y1="0" x2="0" y2="1">
      <stop offset="0" stop-color="#05080F" stop-opacity="0"/>
      <stop offset="0.55" stop-color="#05080F" stop-opacity="0.35"/>
      <stop offset="1" stop-color="#05080F" stop-opacity="0.85"/>
    </linearGradient>
    <linearGradient id="gw-foil" x1="0" y1="0" x2="1" y2="0.7">
      <stop offset="0" stop-color="#FFFFFF" stop-opacity="0.234"/>
      <stop offset="0.28" stop-color="#FFB347" stop-opacity="0.260"/>
      <stop offset="0.5" stop-color="#FFFFFF" stop-opacity="0"/>
      <stop offset="0.72" stop-color="#FF9FF0" stop-opacity="0.208"/>
      <stop offset="1" stop-color="#FFFFFF" stop-opacity="0.156"/>
    </linearGradient>
    <filter id="gw-frost" x="-5%" y="-5%" width="110%" height="110%"><feGaussianBlur stdDeviation="7"/></filter>
    <filter id="gw-glow" x="-5%" y="-80%" width="110%" height="260%">
      <feGaussianBlur in="SourceAlpha" stdDeviation="2.5" result="b"/>
      <feFlood flood-color="#FFB347" flood-opacity="0.95"/>
      <feComposite in2="b" operator="in" result="g"/>
      <feMerge><feMergeNode in="g"/><feMergeNode in="SourceGraphic"/></feMerge>
    </filter>
    <filter id="gw-sparkle" x="-100%" y="-100%" width="300%" height="300%">
      <feGaussianBlur in="SourceAlpha" stdDeviation="3" result="b"/>
      <feFlood flood-color="#FFB347" flood-opacity="0.9"/>
      <feComposite in2="b" operator="in" result="g"/>
      <feMerge><feMergeNode in="g"/><feMergeNode in="SourceGraphic"/></feMerge>
    </filter>
    <filter id="gw-shadow" x="-20%" y="-20%" width="140%" height="160%">
      <feDropShadow dx="0" dy="1" stdDeviation="1.5" flood-color="#000000" flood-opacity="0.7"/>
    </filter>
    <filter id="gw-lift" x="-30%" y="-30%" width="160%" height="160%">
      <feDropShadow dx="0" dy="4" stdDeviation="6" flood-color="#000000" flood-opacity="0.55"/>
    </filter>
    <clipPath id="gw-card"><rect width="358" height="498" rx="20"/></clipPath>
    <clipPath id="gw-avatar"><circle cx="179" cy="132" r="40"/></clipPath>
    <clipPath id="gw-p0"><rect x="12" y="296" width="334" height="64" rx="10"/></clipPath><clipPath id="gw-p1"><rect x="12" y="366" width="334" height="80" rx="10"/></clipPath><clipPath id="gw-p2"><rect x="12" y="452" width="334" height="30" rx="7"/></clipPath>
  </defs>

  <g clip-path="url(#gw-card)">
  <rect width="358" height="498" fill="#070914"/>
  <rect id="gw-art" width="358" height="498" fill="url(#gw-theme)"/>
  <rect y="255" width="358" height="243" fill="url(#gw-scrim)"/>
  <rect width="358" height="498" fill="url(#gw-foil)" style="mix-blend-mode:overlay"/>
  <g transform="skewX(-18)" style="mix-blend-mode:screen"><rect class="gw-sweep" x="-40" y="-20" width="90" height="538" fill="url(#gw-sweepGrad)"/></g>
  <path d="M48,91 Q49.1,94.9 53,96 Q49.1,97.1 48,101 Q46.9,97.1 43,96 Q46.9,94.9 48,91Z" fill="#FFFFFF" opacity="0.63" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:0.00s"/><path d="M300,72.5 Q301.65,78.35 307.5,80 Q301.65,81.65 300,87.5 Q298.35,81.65 292.5,80 Q298.35,78.35 300,72.5Z" fill="#FFFFFF" opacity="0.63" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:0.37s"/><path d="M232,186 Q234.2,193.8 242,196 Q234.2,198.2 232,206 Q229.8,198.2 222,196 Q229.8,193.8 232,186Z" fill="#FFFFFF" opacity="0.63" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:0.74s"/><path d="M90,205 Q91.1,208.9 95,210 Q91.1,211.1 90,215 Q88.9,211.1 85,210 Q88.9,208.9 90,205Z" fill="#FFFFFF" opacity="0.63" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:1.11s"/><path d="M320,182.5 Q321.65,188.35 327.5,190 Q321.65,191.65 320,197.5 Q318.35,191.65 312.5,190 Q318.35,188.35 320,182.5Z" fill="#FFFFFF" opacity="0.63" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:1.48s"/><path d="M250,110 Q252.2,117.8 260,120 Q252.2,122.2 250,130 Q247.8,122.2 240,120 Q247.8,117.8 250,110Z" fill="#FFFFFF" opacity="0.63" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:1.85s"/><path d="M140,65 Q141.1,68.9 145,70 Q141.1,71.1 140,75 Q138.9,71.1 135,70 Q138.9,68.9 140,65Z" fill="#FFFFFF" opacity="0.63" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:2.22s"/><path d="M270,232.5 Q271.65,238.35 277.5,240 Q271.65,241.65 270,247.5 Q268.35,241.65 262.5,240 Q268.35,238.35 270,232.5Z" fill="#FFFFFF" opacity="0.63" filter="url(#gw-sparkle)" class="gw-twinkle" style="animation-delay:2.59s"/>

  <!-- 52-week contribution horizon -->
  <polyline class="gw-pulse" points="8.0,260.8 14.6,244.4 21.2,256.3 27.7,262.1 34.3,262.7 40.9,262.3 47.5,262.9 54.0,261.6 60.6,262.3 67.2,261.6 73.8,243.8 80.3,259.6 86.9,261.8 93.5,263.2 100.1,260.7 106.7,259.5 113.2,258.6 119.8,254.1 126.4,263.2 133.0,262.3 139.5,246.0 146.1,256.0 152.7,261.8 159.3,259.1 165.8,262.7 172.4,260.8 179.0,260.0 185.6,261.2 192.2,261.9 198.7,245.2 205.3,255.2 211.9,263.4 218.5,260.5 225.0,260.1 231.6,257.9 238.2,259.8 244.8,256.4 251.3,257.7 257.9,246.7 264.5,254.1 271.1,265.4 277.7,263.8 284.2,261.4 290.8,259.0 297.4,246.7 304.0,243.0 310.5,252.5 317.1,245.1 323.7,256.5 330.3,253.5 336.8,258.6 343.4,253.4 350.0,264.2" stroke="#FFB347" stroke-width="4.5" stroke-opacity="0.35" stroke-linejoin="round" stroke-linecap="round"/>
  <polyline points="8.0,260.8 14.6,244.4 21.2,256.3 27.7,262.1 34.3,262.7 40.9,262.3 47.5,262.9 54.0,261.6 60.6,262.3 67.2,261.6 73.8,243.8 80.3,259.6 86.9,261.8 93.5,263.2 100.1,260.7 106.7,259.5 113.2,258.6 119.8,254.1 126.4,263.2 133.0,262.3 139.5,246.0 146.1,256.0 152.7,261.8 159.3,259.1 165.8,262.7 172.4,260.8 179.0,260.0 185.6,261.2 192.2,261.9 198.7,245.2 205.3,255.2 211.9,263.4 218.5,260.5 225.0,260.1 231.6,257.9 238.2,259.8 244.8,256.4 251.3,257.7 257.9,246.7 264.5,254.1 271.1,265.4 277.7,263.8 284.2,261.4 290.8,259.0 297.4,246.7 304.0,243.0 310.5,252.5 317.1,245.1 323.7,256.5 330.3,253.5 336.8,258.6 343.4,253.4 350.0,264.2" stroke="#EAFBFF" stroke-opacity="0.95" stroke-width="1.6" stroke-linejoin="round" stroke-linecap="round" filter="url(#gw-glow)"/>

  <!-- Avatar: large circle over the art -->
  <circle cx="179" cy="132" r="43" fill="rgba(10,15,29,0.55)" filter="url(#gw-lift)"/>
  <circle cx="179" cy="132" r="40" fill="#555555"/><text x="179" y="143" text-anchor="middle" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="30" fill="#FFFFFF">T</text>
  <circle cx="179" cy="132" r="41.2" stroke="#FFB347" stroke-opacity="0.85" stroke-width="2.4"/>

  <!-- Header -->
  <rect x="10" y="10" width="338" height="48" rx="11.5" fill="rgba(10,15,29,0.92)" stroke="rgba(255,255,255,0.15)"/>
  <rect x="20" y="19" width="58" height="30" rx="15" fill="#F5C518"/>
  <text x="49" y="37.5" text-anchor="middle" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="9.5" letter-spacing="0.5" fill="#0A0F1D">STAGE 2</text>
  <text x="179" y="39.5" text-anchor="middle" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="15.5" fill="#FFFFFF">torvalds</text>
  <text x="340" y="43" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="24" fill="#FFFFFF">340</text>
  <text x="286.5" y="43" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="8" fill="#9FB3CC">HP</text>

  <!-- Frosted panels -->
  <g clip-path="url(#gw-p0)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="296" width="334" height="64" rx="10" fill="rgba(11,18,32,0.55)" stroke="rgba(255,255,255,0.14)"/>
  <line x1="22" y1="296.5" x2="336" y2="296.5" stroke="rgba(255,255,255,0.18)"/>
  <g clip-path="url(#gw-p1)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="366" width="334" height="80" rx="10" fill="rgba(11,18,32,0.55)" stroke="rgba(255,255,255,0.14)"/>
  <line x1="22" y1="366.5" x2="336" y2="366.5" stroke="rgba(255,255,255,0.18)"/>
  <g clip-path="url(#gw-p2)"><use href="#gw-art" filter="url(#gw-frost)"/></g>
  <rect x="12" y="452" width="334" height="30" rx="7" fill="rgba(10,15,29,0.70)" stroke="rgba(255,255,255,0.14)"/>
  <line x1="19" y1="452.5" x2="339" y2="452.5" stroke="rgba(255,255,255,0.18)"/>

  <!-- Ability -->
  <text x="24" y="313" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="7.5" letter-spacing="2" fill="#FFB347">ABILITY</text>
  <text x="84" y="314" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="14.5" fill="#FFFFFF">Star Collector</text>
  <text x="24" y="332" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="9.5" font-style="italic" fill="#D5DEEC">262k stars across own repos - immune to weakness</text>
  <text x="24" y="347" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8.5" letter-spacing="0.5" fill="#8CA0BC">3,763 contribs · 53/53 wks active</text>

  <!-- Attacks -->
  <circle cx="29.5" cy="379.5" r="5.5" fill="#FFB347" stroke="rgba(255,255,255,0.35)"/><circle cx="43.5" cy="379.5" r="5.5" fill="#FFB347" stroke="rgba(255,255,255,0.35)"/>
  <text x="58" y="384" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="12.5" fill="#FFFFFF">Memory Alloc</text>
  <text x="58" y="397" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" fill="#93A5C0">3,763 contributions in the last year</text>
  <text x="334" y="393" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="21" fill="#FFFFFF" filter="url(#gw-shadow)">120</text>
  <rect x="24" y="406" width="310" height="1" fill="rgba(255,255,255,0.09)"/>
  <circle cx="29.5" cy="417.5" r="5.5" fill="#FFB347" stroke="rgba(255,255,255,0.35)"/><circle cx="43.5" cy="417.5" r="5.5" fill="#FFB347" stroke="rgba(255,255,255,0.35)"/><circle cx="57.5" cy="417.5" r="5.5" fill="#FFB347" stroke="rgba(255,255,255,0.35)"/>
  <text x="72" y="422" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="12.5" fill="#FFFFFF">System Call</text>
  <text x="72" y="435" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" fill="#93A5C0">Powered by linux - ★ 250k</text>
  <text x="334" y="431" text-anchor="end" font-family="'Archivo Black', 'Arial Black', 'Segoe UI Black', sans-serif" font-size="21" fill="#FFFFFF" filter="url(#gw-shadow)">200</text>

  <!-- Weakness / resist / retreat -->
  <text x="67.7" y="471.5" text-anchor="middle" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace"><tspan font-size="7" letter-spacing="1" fill="#7E90AB">WEAKNESS</tspan><tspan font-size="9.5" fill="#9AA7B8" dx="6">●</tspan><tspan font-size="9.5" fill="#C7D2E2" dx="4">×2</tspan></text>
  <rect x="123.3" y="459" width="1" height="16" fill="rgba(255,255,255,0.09)"/>
  <text x="179.0" y="471.5" text-anchor="middle" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace"><tspan font-size="7" letter-spacing="1" fill="#7E90AB">RESIST</tspan><tspan font-size="9.5" fill="#9AA7B8" dx="6">●</tspan><tspan font-size="9.5" fill="#C7D2E2" dx="4">-30</tspan></text>
  <rect x="234.7" y="459" width="1" height="16" fill="rgba(255,255,255,0.09)"/>
  <text x="290.3" y="471.5" text-anchor="middle" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace"><tspan font-size="7" letter-spacing="1" fill="#7E90AB">RETREAT</tspan><tspan font-size="9.5" fill="#FFB347" dx="6" letter-spacing="1">●●●</tspan></text>

  <!-- Footer -->
  <text x="18" y="492" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" fill="#A9B8CE" filter="url(#gw-shadow)">gitwrapped · Bedrock Tortoise · Ember Canyon</text>
  <text x="340" y="492" text-anchor="end" font-family="'JetBrains Mono', 'SFMono-Regular', Consolas, 'Liberation Mono', monospace" font-size="8" letter-spacing="1" fill="#FFB347" filter="url(#gw-shadow)">◆ LEGENDARY</text>
  </g>

  <!-- Rarity frame -->
  <rect x="1.5" y="1.5" width="355" height="495" rx="18.5" stroke="#F5C518" stroke-opacity="0.9" stroke-width="3"/>
</svg>"
`;
